corrected dynamic error spacing

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -33,6 +33,14 @@ label {
   margin-bottom: $spacing-300;
 }
 
+.errorMessage {
+  color: $redError;
+  font-size: 16px;
+  font-weight: 400;
+  display: inline-block;
+  margin-top: $spacing-150;
+  margin-bottom: $spacing-300;
+}
 .col-sm-6,
 .col {
   display: flex;
